# diffusion_code

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
examples/: CMakeLists.txt
examples/1DRadialDiffusion/: 1Dradialdiffusion.cpp  CMakeLists.txt
examples/ConstantDiffusionAdvection/: CMakeLists.txt  constantdiffusionadvection.cpp
examples/SimpleDiffusion1DExplicit/: CMakeLists.txt  simple1Ddiffusion.cpp
examples/SimpleDiffusion1DImplicit/: CMakeLists.txt  simple1DdiffusionImplicit.cpp
include/: boundary.hpp  diffusion_coeffs.hpp  grid.hpp  integrate.hpp  io.hpp  solver.hpp
tests/: CMakeLists.txt
tests/diffusion_tests/: CMakeLists.txt  Coeff1D_tests.cpp  diffusion_tests.cpp
tests/grid_tests/: CMakeLists.txt  grid_tests.cpp
tests/integrate_tests/: CMakeLists.txt  integrate_tests.cpp
